k8s/bank-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-service
  namespace: paytm-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-service
  template:
    metadata:
      labels:
        app: bank-service
    spec:
      containers:
      - name: bank-service
        image: pradipshinde/bank-service:BUILD_NUMBER
        ports:
        - containerPort: 9007
---
apiVersion: v1
kind: Service
metadata:
  name: bank-service-service
  namespace: paytm-app
spec:
  selector:
    app: bank-service
  ports:
  - port: 9007
    targetPort: 9007
  type: ClusterIP
