k8s/loan-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-service
  namespace: paytm-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loan-service
  template:
    metadata:
      labels:
        app: loan-service
    spec:
      containers:
      - name: loan-service
        image: pradipshinde/loan-service:BUILD_NUMBER
        ports:
        - containerPort: 9008
---
apiVersion: v1
kind: Service
metadata:
  name: loan-service-service
  namespace: paytm-app
spec:
  selector:
    app: loan-service
  ports:
  - port: 9008
    targetPort: 9008
  type: ClusterIP
