k8s/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: paytm-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: kastrov/user-service:BUILD_NUMBER
        ports:
        - containerPort: 9004
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-service
  namespace: paytm-app
spec:
  selector:
    app: user-service
  ports:
  - port: 9004
    targetPort: 9004
  type: ClusterIP
